# morocco-art-culture-game

./: .gitignore  CMakeLists.txt  README.md
src/: animation.cpp  collision.cpp  food.cpp  hearts.cpp  main.cpp  platform.cpp  player.cpp  score.cpp
src/include/: animation.h  collision.h  food.h  hearts.h  platform.h  player.h  score.h
